build/00008/H4P_BLESrvMinimal_pico.log
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git#5b72058658ebaf98045755662bc8b28479bd288b; framework: arduino; board: rpipicow)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipicow.html
PLATFORM: Raspberry Pi RP2040 (1.14.0+sha.5b72058) > Pico W
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.40101.0+sha.9d17f42 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.240929 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.240929 (14.2.0)
Converting H4P_BLESrvMinimal.ino
Flash size: 2.00MB
Sketch size: 1.50MB
Filesystem size: 0.50MB
PSRAM size: 0.00MB
Maximium Sketch size: 1568768 EEPROM start: 0x101ff000 Filesystem start: 0x1017f000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 72 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- LittleFS @ 0.1.0
|-- WiFi @ 1.0.0
|-- lwIP_CYW43 @ 1
|-- lwIP-Ethernet @ 1
|-- SPI @ 1.0
|-- Updater @ 1.0
|-- MD5Builder @ 1.0.0
|-- LEAmDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- HTTPUpdate @ 1.3
|-- HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/pico/src/H4P_BLESrvMinimal.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:2:
.pio/libdeps/pico/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:8:1: error: 'H4P_BLEServer' does not name a type; did you mean 'H4P_UPNPServer'?
    8 | H4P_BLEServer h4ble;
      | ^~~~~~~~~~~~~
      | H4P_UPNPServer
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino: In function 'void h4pGlobalEventHandler(const std::string&, H4PE_TYPE, const std::string&)':
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:28:17: error: 'h4ble' was not declared in this scope
   28 |                 h4ble.elemAddBoolean("mybool");
      |                 ^~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino: In lambda function:
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:33:33: error: 'h4ble' is not captured
   33 |                                 h4ble.elemSetValue("mybool", val);
      |                                 ^~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:29:33: note: the lambda has no capture-default
   29 |                 h4.every(1000, []{
      |                                 ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_BLESrvMinimal.ino:28:17: note: '<typeprefixerror>h4ble' declared here
   28 |                 h4ble.elemAddBoolean("mybool");
      |                 ^~~~~
*** [.pio/build/pico/src/H4P_BLESrvMinimal.ino.cpp.o] Error 1
========================== [FAILED] Took 5.03 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
pico           FAILED    00:00:05.028
==================== 1 failed, 0 succeeded in 00:00:05.028 ====================